--- a/html5-input-spec.html
+++ b/html5-input-spec.html
@@ -10,7 +10,18 @@
 <script type="text/javascript" src="library/diff_match_patch.js"></script>
 <script type="text/javascript" src="library/JSSpec.js"></script>
 <script type="text/javascript">// <![CDATA[
+describe('placeholder attribute for text type', {
+  "before":function(){
+    target = new carrcraft.Html5Emulator();
+  },
+  "should default the value of the input to it's value": function() {
+    var expectedValue = $("#first_name").attr('placeholder')
 
+    target.emulateInputs();
+
+    value_of($('#first_name').val()).should_be(expectedValue)
+  }
+});
 
 // ]]></script>
 </head>
