--- a/html5-input-spec.html
+++ b/html5-input-spec.html
@@ -14,6 +14,9 @@ describe('placeholder attribute for an empty text input type', {
   "before":function(){
     target = new carrcraft.Html5Emulator();
   },
+  "after":function(){
+    $('#first_name').val("")
+  },
 	"should default the value of the input to it's value": function() {
     var expectedValue = $("#first_name").attr('placeholder')
     
@@ -43,6 +46,15 @@ describe('placeholder attribute for an empty text input type', {
 	  $("#first_name").blur()
 	  
 	  value_of($('#first_name').val()).should_be($("#first_name").attr('placeholder'))	  
+	},
+	"should not reset the input value to the placeholder text if the value is populated":function(){
+	  target.emulateInputs();
+	  
+    $('#first_name').focus()
+    $('#first_name').val("James")
+	  $("#first_name").blur()
+	  
+	  value_of($('#first_name').val()).should_be("James")	  
 	}
 })
 
@@ -51,6 +63,7 @@ describe('placeholder attribute for an empty text input type', {
 <body>
   <div style="display:none;">
     <input type="text" placeholder="Enter your name" name="first_name" id="first_name">
+    <input type="text" placeholder="Enter your name" name="foo" id="pre-existing-value" value="Some Value">
   </div>
 </body>
 </html>
