finished yui example

--- a/yuitest/all.tests.html
+++ b/yuitest/all.tests.html
@@ -1,18 +1,18 @@
-&lt;html&gt;
-  &lt;head&gt;
-    &lt;link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/logger/assets/skins/sam/logger.css" /&gt;
-    &lt;link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/fonts/fonts-min.css" /&gt;
-    &lt;link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/yuitest/assets/skins/sam/yuitest.css" /&gt;
-    &lt;script type="text/javascript" src="http://yui.yahooapis.com/2.7.0/build/yahoo-dom-event/yahoo-dom-event.js"&gt;&lt;/script&gt;
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/logger/assets/skins/sam/logger.css" />
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/fonts/fonts-min.css" />
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/yuitest/assets/skins/sam/yuitest.css" />
+    <script type="text/javascript" src="http://yui.yahooapis.com/2.7.0/build/yahoo-dom-event/yahoo-dom-event.js"></script>
 
-    &lt;script type="text/javascript" src="http://yui.yahooapis.com/2.7.0/build/logger/logger-min.js"&gt;&lt;/script&gt;
-    &lt;script type="text/javascript" src="http://yui.yahooapis.com/2.7.0/build/yuitest/yuitest-min.js"&gt;&lt;/script&gt;
+    <script type="text/javascript" src="http://yui.yahooapis.com/2.7.0/build/logger/logger-min.js"></script>
+    <script type="text/javascript" src="http://yui.yahooapis.com/2.7.0/build/yuitest/yuitest-min.js"></script>
 
     
-    &lt;script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"&gt;&lt;/script&gt;
-    &lt;script type="text/javascript" src="lib/html5.emulator.js"&gt;&lt;/script&gt;
-    &lt;script type="text/javascript" src="html5.placeholder.test.js"&gt;&lt;/script&gt;
-    &lt;script type="text/javascript"&gt;
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/html5.emulator.js"></script>
+    <script type="text/javascript" src="html5.placeholder.test.js"></script>
+    <script type="text/javascript">
     YAHOO.util.Event.onDOMReady(function (){
         with(YAHOO.tool){
           var logger = new TestLogger("testLogger");
@@ -21,10 +21,10 @@
         }     
      });
   
-    &lt;/script&gt;
-  &lt;/head&gt;
-  &lt;body class="yui-skin-sam"&gt;
-    &lt;div id="testLogger"&gt;&lt;/div&gt;
+    </script>
+  </head>
+  <body class="yui-skin-sam">
+    <div id="testLogger"></div>
 
-  &lt;/body&gt;
-&lt;/html&gt;
+  </body>
+</html>
